fix navoptions margin on mobile

--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -205,7 +205,7 @@ nav {
 	font-size: 2rem;
 	margin: 1rem 0 1rem 0;
 	transition: transform 0.5s ease;
-	width: 30%;
+	width: 100%;
 }
 
 .nav-options > li:hover {
@@ -1256,6 +1256,7 @@ footer {
 	width: 100%;
 	justify-content: center;
 	padding: 2rem 0 5rem 0;
+	margin: 20px 0 0 0;
 	background: #e7e5d5;
 }
 
@@ -2109,12 +2110,13 @@ footer {
 		width: 60%;
 	}
 
-	.show-options {
+	/*.show-options {
 		margin-bottom: 1rem;
-	}
+	}*/
 
 	.nav-options > li {
 		font-size: 1.5rem;
+		width: 100%;
 	}
 
 	.item-image-box, .item-detail {
